unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/ETM_Vehicle_Test_Drive__c.object-meta.xml
<CustomObject>
    <label>Vehicle Test Drive</label>
    <nameField>
        <displayFormat>TD-{000000}</displayFormat>
        <label>Test Drive</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vehicle Test Drive</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>