unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/fields/ETM_Feedback__c.field-meta.xml
<CustomField>
    <fullName>ETM_Feedback__c</fullName>
    <label>Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interested</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Hold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>