unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/fields/ETM_Lead__c.field-meta.xml
<CustomField>
    <fullName>ETM_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Vehicle Test Drive</relationshipLabel>
    <relationshipName>ET_Vehicle_Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>