unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/fields/ETM_Status__c.field-meta.xml
<CustomField>
    <fullName>ETM_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initiated</fullName>
                <default>true</default>
                <label>Initiated</label>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Selected</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Reschedule</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
            <value>
                <fullName>Planned</fullName>
                <isActive>false</isActive>
                <label>Planned</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>