unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/fields/ETM_Vehicle_No__c.field-meta.xml
<CustomField>
    <fullName>ETM_Vehicle_No__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle No</label>
    <referenceTo>ETM_Sales_Vehicle_Inventory__c</referenceTo>
    <relationshipLabel>Vehicle Test Drive</relationshipLabel>
    <relationshipName>ET_Vehicle_Test_Drive</relationshipName>
    <type>Lookup</type>
</CustomField>