unpackaged/main/default/objects/ETM_Vehicle_Test_Drive__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ETM_Vehicle_No__c</columns>
    <columns>ETM_Status__c</columns>
    <columns>ETM_Feedback__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>